Add HTTP client SSE