@@ -121,6 +121,7 @@ tasks.withType(Test) { testTask ->
     testTask.useJUnitPlatform()
     testTask.systemProperties(project.getProperties().findAll { it.value instanceof String })
     testTask.systemProperty("file.encoding", "utf-8")
+    testTask.jvmArgs('--enable-preview')
 
     testTask.testLogging {
         if (logger.isInfoEnabled())
